fix: improve splash text legibility

--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ a {
 .splash .wrapper p {
 	text-align: center;
 	margin: 60px;
+	text-shadow: 0 0 10px #000, 0 0 10px #000, 0 0 10px #000, 0 0 10px #000;
 }
 
 .main-footer {
